Data manipulation for model building

--- a/2.R.ipynb
+++ b/2.R.ipynb
@@ -577,7 +577,7 @@
    "source": [
     "## Fetching the numeric attributes from the dataframe\n",
     "\n",
-    "num_data<-data[!names(data)%in%cat_att]\n",
+    "num_data = data[!names(data)%in%cat_att]\n",
     "names(num_data)\n",
     "\n",
     "# names(data) retrieves the column names of the data data frame.\n",
@@ -1052,7 +1052,7 @@
     }
    ],
    "source": [
-    "cat_data1<-data.frame(cat_data[-2],dummies)\n",
+    "cat_data1 = data.frame(cat_data[-2],dummies)\n",
     "head(cat_data1)"
    ]
   },
